# Insty-Marketing

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
platform/backend-ai/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
platform/backend-ai/.github/workflows/: dev.yml  main.yml
platform/backend-ai/app/: celery_app.py  main.py
platform/backend-ai/app/api/: main.py
platform/backend-ai/app/core/: async_db.py  auth.py  config.py  db.py  error_codes.py  exceptions.py
platform/backend-ai/app/docs/: deco.py  loader.py
platform/backend-ai/app/models/: chat.py  course.py  course_request.py  creator_recommendation.py  file.py  search.py  video.py
platform/backend-ai/app/prompts/: ai_service_recommendation_prompt.j2  chat_completion_prompt.j2  chat_summary_prompt.j2  community_answer_draft_prompt.j2  community_question_draft_prompt.j2  community_thought_draft_prompt.j2  course_request_prompt.j2  course_request_reason_with_base_prompt.j2  course_request_reason_with_form_prompt.j2  description_suggestion_prompt.j2  metadata_prompt.j2  practice_guide_prompt.j2  production_checklist_prompt.j2  purchase_assistant_prompt.j2  query_expander_system_prompt.j2  query_expander_user_prompt.j2  recommendation_prompt.j2  references_prompt.j2  script_generation_prompt.j2  section_plan_prompt.j2  summary_course_request_prompt.j2  title_suggestion_prompt.j2  vision_ocr_prompt.j2
platform/backend-ai/app/schemas/: chat.py  common.py  community.py  course.py  search.py  user.py  video.py
(+320 files in other folders)
